Fixed submit issue, should be final copy

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <!--Hw5 and HW6 stuff and beyond -->
 <div class="form-style">
   <!-- added form id here for jquery validation stuff and onsubmit because buttons don't work with jquery for some reason -->
-<form id="inputForm" onsubmit="return readInNumbers();">
+<form id="inputForm">
   <!-- Here I'm creating the form that reads the inputs from the user for min/max row and column. Each input has its own unique id and name. Name will be used for jquery later.-->
 <label for='minRow'> Enter Minimum Row Value: </label><br>
 <input type="number" id="minRowNumber" name="minRowNumber" required><br>
